--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <title>this is good website</title>
 <h1>this is very good website</h1>
-<p>welcome,enjoy my website</p>
+<p>hi,enjoy my website</p>
 </html>
+
